...
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Layout for displaying exchange rates in WalletActivity -->

    <TextView
        android:id="@+id/penyRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dolrRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/quidRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/shilRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>
...
