...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/transfer_coins_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/transfer_coins"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button" />

    <Button
        android:id="@+id/deposit_coins_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="6dp"
        android:text="@string/deposit_coins"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button"/>

    <Button
        android:id="@+id/select_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:text="@string/select_all"
...
