<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/wallet"
    android:title="Wallet"
    android:icon="@drawable/ic_wallet_black_24dp"/>
<item android:id="@+id/bank_account"
    android:title="Bank Account"
    android:icon="@drawable/ic_bank_black_24dp"/>
<item android:id="@+id/gifts"
    android:title="Gifts"
...
